@@ -7,6 +7,7 @@
 
 module Annex.CatFile (
 	catFile,
+	catFileDetails,
 	catObject,
 	catTree,
 	catObjectDetails,
@@ -33,6 +34,11 @@ catFile :: Git.Branch -> FilePath -> Annex L.ByteString
 catFile branch file = do
 	h <- catFileHandle
 	liftIO $ Git.CatFile.catFile h branch file
+
+catFileDetails :: Git.Branch -> FilePath -> Annex (Maybe (L.ByteString, Sha, ObjectType))
+catFileDetails branch file = do
+	h <- catFileHandle
+	liftIO $ Git.CatFile.catFileDetails h branch file
 
 catObject :: Git.Ref -> Annex L.ByteString
 catObject ref = do
